<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记账助手</string>
    <string name="action_settings">设置</string>
    <string name="txtNewPayEntry">新建</string>
    <string name="txtAccount">历史</string>
    <string name="txtPersons">成员</string>
    <string name="txtSync">同步</string>
    <string name="txtExport">导出</string>
    <string name="txtHelp">帮助</string>
    <string name="txtOK">确定</string>
    <string name="txtCancle">取消</string>
    <string name="title_activity_select_location">选择地点</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtLocation">地点</string>
    <string name="title_activity_location_list">所有地点</string>
    <string name="txtAdd">新建</string>
    <string name="txtRemove">删除</string>
    <string name="txtEdit">编辑</string>
    <string name="txtLocationGroup">地点分组</string>
    <string name="add_location">新建地点</string>
    <string name="remove_location">删除地点</string>
    <string name="edit_location">编辑地点</string>
    <string name="add_person">新建成员</string>
    <string name="remove_person">删除成员</string>
    <string name="edit_person">编辑成员</string>
    <string name="remove_person_message">你确定要删除[%s]吗?</string>
    <string name="title_activity_persons_list">所有成员</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location_group">所有地点分组</string>
    <string name="title_activity_history_list">所有消费历史</string>
    <string name="activity_select_persons">选择成员</string>
    <string name="activity_location_groups">所有地点分组</string>
    <string name="title_activity_person_detail">成员信息</string>
    <string name="title_activity_attend_info_input">选择成员与分账</string>
    <string name="title_activity_pay_history_detail">消费历史</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="title_activity_storage_manager">存储管理器</string>
</resources>
