<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yyscamper.cashnote.PersonManagerActivity" >

    <item android:id="@+id/action_new_person"
        android:title="@string/txtAdd"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_remove_person"
        android:title="@string/txtRemove"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_remove"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit_person"
        android:title="@string/txtEdit"
        android:orderInCategory="102"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom" />

</menu>
