<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:holo="http://schemas.android.com/apk/res-auto"
    tools:context="com.yyscamper.cashnote.MainActivity" >

    <!-- Refresh -->
    <item android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/txtSync"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_history"
        android:icon="@drawable/ic_action_event"
        android:title="历史记录"
        android:showAsAction="ifRoom"/>

    <!-- Persons -->
    <item android:id="@+id/action_persons"
        android:icon="@drawable/ic_action_person"
        android:title="成员管理"
        android:showAsAction="ifRoom" />

    <!-- Setting -->
    <item android:id="@+id/action_locations"
        android:title="地点管理"
        android:showAsAction="never" />

    <!-- Setting -->
    <item android:id="@+id/action_location_groups"
        android:title="地点分组"
        android:showAsAction="never" />


    <!-- Setting -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/txtHelp"
        android:showAsAction="never"/>

    <!-- Setting -->
    <item android:id="@+id/action_debug_init_db"
        android:icon="@drawable/ic_action_settings"
        android:title="[调试]初始化数据库"
        android:showAsAction="never" />

    <!-- Help -->
    <item android:id="@+id/action_debug_clear_db"
        android:icon="@drawable/ic_action_help"
        android:title="[调试]清空数据库"
        android:showAsAction="never"/>

</menu>
